# mempp

./: .gitattributes  .gitignore  pyproject.toml
docs/: ARCHITECTURE.md
src/mempp/: __init__.py  config.py
src/mempp/retrieve/: __init__.py  retrieve.py
src/mempp/system/: __init__.py  system.py
src/mempp/update/: __init__.py  update.py
tests/: __init__.py  test_build_pipeline.py  test_storage.py
